# storyforge

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
benches/: README.md  engine_move.rs  engine_step_baseline.rs  snapshot_rebuild.rs  snapshot_rebuild_production.rs
crates/combat_ai/: Cargo.toml
crates/combat_ai/src/: entity_id.rs  lib.rs  serde_helpers.rs
docs/: ai-replay.md  ai.md  ai_arch_review.md  ai_mining_raw.md  ai_need_signals.md  ai_plan_freeze.md  ai_rework.md  ai_rework_plan.md  ai_rework_plan_phase4.md  ai_rework_step10_plan.md  ai_rework_step11_8_design.md  ai_rework_step11_8_findings.md  ai_rework_step11_plan.md  ai_rework_step3_plan.md  ai_rework_step4_plan.md  ai_rework_step5_plan.md  ai_rework_step6_plan.md  ai_rework_step7_plan.md  ai_rework_step8A_implementer.md  ai_rework_step8B_implementer.md  ai_rework_step9B_implementer.md  ai_rework_step9C_implementer.md  architecture.md  combat-pipeline.md  comment-audit.md  content-guide.md  engine-architecture.md  hex-grid.md  items-icon-art.md  items-icon-prompts-en.md  known_issues.md  magic-schools.md  mechanics.md  testing.md  world.md
logs/: baseline_20260422_step3.txt  golden_post_step3.jsonl  golden_post_step4.jsonl  golden_post_step6.jsonl  phase7_P2_bucketed_20260422.txt  phase7_prototype_20260422.txt
measurements/: BASELINE.md  coverage-after-phase1.txt  coverage-before.txt  mutants-after-phase1.5-missed.txt  mutants-after-phase1.5-outcomes.json  mutants-caught-before.txt  mutants-classify-after-outcomes.json  mutants-classify-before-missed.txt  mutants-classify-before-outcomes.json  mutants-heal-missed.txt  mutants-heal-outcomes.json  mutants-missed-before.txt  mutants-overcommit-missed.txt  mutants-overcommit-outcomes.json  mutants-phase4-blindspot-outcomes.json  mutants-phase4-buff_into_void-outcomes.json  mutants-phase4-mod-outcomes.json  mutants-rare_resource-missed.txt  mutants-rare_resource-outcomes.json  mutants-self_lethal-missed.txt  mutants-self_lethal-outcomes.json  slow-tests-before.txt
scripts/: analyze_log.py
src/: app_state.rs  lib.rs  main.rs  scenario.rs
tests/: ai_scenarios.rs  aoo.rs  auras.rs  choice_scene_e2e.rs  combat.rs  combat_engine.rs  content_parse_snapshot.rs  crit_fail.rs  effects.rs  encounter_toml_v2.rs  engine_dice.rs  engine_effect.rs  engine_parity.rs  engine_reaction.rs  engine_state.rs  engine_step.rs  engine_step_range_correlation.rs  env_ownership_e2e.rs  equipment.rs  golden_smoke.rs  init_fight_equivalence.rs  los_ai_e2e.rs  los_parity.rs  movement.rs  non_acting_npc.rs  non_acting_npc_e2e.rs  parity.rs  phase_deadline_e2e.rs  pipeline.rs  projection_isolation.rs  replay_assert.rs  replay_diff_smoke.rs  (+4 more)
(+605 files in other folders)
