[package]
name = "storyforge"
version = "0.1.0"
edition = "2021"
default-run = "storyforge"

[dependencies]
bevy  = "0.18"
hexx  = { version = "0.24", features = ["bevy", "algorithms"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml  = "0.8"
bitflags = "2"
directories = "6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
