[workspace]
members = ["crates/combat_engine", "crates/combat_ai"]

[package]
name = "storyforge"
version = "0.1.0"
edition = "2021"
default-run = "storyforge"

[dependencies]
combat_engine = { path = "crates/combat_engine" }
combat_ai = { path = "crates/combat_ai", features = ["bevy"] }
bevy  = "0.18"
hexx  = { version = "0.24", features = ["bevy", "algorithms"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml  = "0.8"
bitflags = "2"
directories = "6"
enum-map = { version = "2", features = ["serde"] }

[features]
# Включить `bevy/dynamic_linking` только для локальной dev-сборки:
#   cargo run   --features dev
#   cargo build --features dev
#   cargo test  --features dev
# Релиз и бенчи запускать БЕЗ этой фичи — нужен статический линк.
dev = ["bevy/dynamic_linking"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_move"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
